add temporary check function

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "typescript": "^2.5.2"
   },
   "dependencies": {
+    "aws-sdk": "^2.109.0",
     "execa": "^0.8.0",
     "fs-extra": "^4.0.1"
   }
