--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "aws-sdk": "^2.109.0",
     "execa": "^0.8.0",
     "fs-extra": "^4.0.1",
-    "get-license-npm": "^1.1.1"
+    "get-license-npm": "^1.1.1",
+    "request": "^2.81.0",
+    "request-promise-native": "^1.0.4"
   }
 }
