--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "execa": "^0.8.0",
     "fs-extra": "^4.0.1",
     "get-license-npm": "^1.1.1",
+    "gh-issues-stats": "^2.0.4",
     "request": "^2.81.0",
     "request-promise-native": "^1.0.4"
   }
