--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   "dependencies": {
     "aws-sdk": "^2.109.0",
     "commander": "^2.11.0",
+    "corp-check-core": "^1.0.4",
     "execa": "^0.8.0",
     "fs-extra": "^4.0.1",
     "get-license-npm": "^1.1.1",
