--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "homepage": "https://github.com/jaystack/corp-check-worker#readme",
   "devDependencies": {
+    "@types/amqplib": "^0.5.4",
     "@types/execa": "^0.7.1",
     "@types/fs-extra": "^4.0.2",
     "@types/node": "^8.0.41",
@@ -31,6 +32,7 @@
     "typescript": "^2.5.3"
   },
   "dependencies": {
+    "amqplib": "^0.5.1",
     "aws-sdk": "^2.134.0",
     "commander": "^2.11.0",
     "corp-check-core": "^1.0.6",
