--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "build": "rimraf lib && tsc",
     "build:w": "tsc -w",
-    "deploy": "sh deploy.sh"
+    "test": "jest",
+    "test:w": "jest --watch"
   },
   "files": [
     "lib"
@@ -23,12 +24,33 @@
     "url": "https://github.com/jaystack/corp-check-worker/issues"
   },
   "homepage": "https://github.com/jaystack/corp-check-worker#readme",
+  "jest": {
+    "globals": {
+      "ts-test": {
+        "tsConfigFile": "tsconfig.json"
+      }
+    },
+    "moduleFileExtensions": [
+      "ts",
+      "js"
+    ],
+    "transform": {
+      "^.+\\.(ts)$": "./node_modules/ts-jest/preprocessor.js"
+    },
+    "testMatch": [
+      "**/test/**/*.spec.(ts|js)"
+    ],
+    "testEnvironment": "node"
+  },
   "devDependencies": {
     "@types/amqplib": "^0.5.4",
     "@types/execa": "^0.7.1",
     "@types/fs-extra": "^4.0.2",
+    "@types/jest": "^21.1.4",
     "@types/node": "^8.0.45",
+    "jest": "^21.2.1",
     "rimraf": "^2.6.2",
+    "ts-jest": "^21.1.3",
     "typescript": "^2.5.3"
   },
   "dependencies": {
