--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@types/jest": "^21.1.4",
     "@types/node": "^8.0.45",
     "jest": "^21.2.1",
+    "jest-junit": "^3.1.0",
     "rimraf": "^2.6.2",
     "ts-jest": "^21.1.3",
     "typescript": "^2.5.3"
