--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "testMatch": [
       "**/test/**/*.spec.(ts|js)"
     ],
+    "testResultsProcessor": "jest-junit",
     "testEnvironment": "node"
   },
   "devDependencies": {
